Updated Whirled SDK to version 0.43.

--- a/pages/code/asdocs/all-index-A.html
+++ b/pages/code/asdocs/all-index-A.html
@@ -222,6 +222,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
      Add values to an existing bag.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html#adjustSeek()">adjustSeek</a>(trackX) &mdash; Method in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html">SimpleVideoDisplay</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameControl.html#agent">agent</a> &mdash; Property in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameControl.html">AVRGameControl</a></td>
 </tr>
 <tr>
@@ -439,6 +445,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/CameraSnapshotter.html#attachVideo()">attachVideo</a>() &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/CameraSnapshotter.html">CameraSnapshotter</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/FlvVideoPlayer.html#_autoPlay">_autoPlay</a> &mdash; Property in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/FlvVideoPlayer.html">FlvVideoPlayer</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
