--- a/pages/code/asdocs/all-index-D.html
+++ b/pages/code/asdocs/all-index-D.html
@@ -326,6 +326,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html#_dragging">_dragging</a> &mdash; Property in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html">SimpleVideoDisplay</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html#dumpHierarchy()">dumpHierarchy</a>(top) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html">DisplayUtil</a></td>
 </tr>
 <tr>
