--- a/pages/code/asdocs/all-index-H.html
+++ b/pages/code/asdocs/all-index-H.html
@@ -161,6 +161,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html#handleKnobSeekCheck()">handleKnobSeekCheck</a>(event) &mdash; Method in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html">SimpleVideoDisplay</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html#handleKnobUp()">handleKnobUp</a>(event) &mdash; Method in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html">SimpleVideoDisplay</a></td>
 </tr>
 <tr>
