--- a/pages/code/asdocs/all-index-L.html
+++ b/pages/code/asdocs/all-index-L.html
@@ -60,6 +60,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("LÂ
 <td width="20"></td><td> The last-removed index.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html#_lastKnobX">_lastKnobX</a> &mdash; Property in class com.threerings.flash.video.<a onclick="javascript:loadClassListFrame('com/threerings/flash/video/class-list.html');" href="com/threerings/flash/video/SimpleVideoDisplay.html">SimpleVideoDisplay</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html#_lastSelected">_lastSelected</a> &mdash; Static property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/TextFieldUtil.html">TextFieldUtil</a></td>
 </tr>
 <tr>
