--- a/pages/code/asdocs/all-index-R.html
+++ b/pages/code/asdocs/all-index-R.html
@@ -173,7 +173,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <tr>
 <td width="20"></td><td>
      Updates the number of operations for this throttle to a new maximum, retaining the current
-     history of operations if the limit is being increased and truncating the oldest operations
+     history of operations if the limit is being increased and truncating the newest operations
      if the limit is decreased.</td>
 </tr>
 <tr>
