--- a/pages/code/asdocs/com/threerings/util/Set.html
+++ b/pages/code/asdocs/com/threerings/util/Set.html
@@ -78,7 +78,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("In
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#forEach()">forEach</a>(fn:Function, thisObject:* = null):void</div>
+<a class="signatureLink" href="#forEach()">forEach</a>(fn:Function):void</div>
 <div class="summaryTableDescription"> Call the specified function, which accepts an element as an argument.</div>
 </td><td class="summaryTableOwnerCol">Set</td>
 </tr>
@@ -181,16 +181,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function forEach(fn:Function, thisObject:* = null):void</code><p> Call the specified function, which accepts an element as an argument. </p><span class="label">Parameters</span>
+<code>public function forEach(fn:Function):void</code><p> Call the specified function, which accepts an element as an argument. </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">fn</span>:Function</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">thisObject</span>:*</code> (default = <code>null</code>)<code></code></td>
 </tr>
 </table>
 </div>
