--- a/pages/code/contrib/asdocs/all-index-F.html
+++ b/pages/code/contrib/asdocs/all-index-F.html
@@ -427,7 +427,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("FÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/ObjectSet.html#forEach()">forEach</a>(callback, thisObject) &mdash; Method in class com.whirled.contrib.simplegame.util.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/ObjectSet.html">ObjectSet</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/ObjectSet.html#forEach()">forEach</a>(callback) &mdash; Method in class com.whirled.contrib.simplegame.util.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/ObjectSet.html">ObjectSet</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
