--- a/pages/code/asdocs/com/threerings/flash/video/SimpleVideoDisplay.html
+++ b/pages/code/asdocs/com/threerings/flash/video/SimpleVideoDisplay.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="SimpleVideoDisplay,com.threerings.flash.video.SimpleVideoDisplay,NATIVE_HEIGHT,NATIVE_WIDTH,PAD,TRACK_HEIGHT,TRACK_WIDTH,_hud,_knob,_mask,_player,_track,log,handleClick,handleKnobDown,handleKnobUp,handlePlayerDuration,handlePlayerError,handlePlayerPosition,handlePlayerSize,handlePlayerState,handleRollOut,handleRollOver,handleTrackClick,redrawHUD,showHUD,unload" name="keywords">
+<meta content="SimpleVideoDisplay,com.threerings.flash.video.SimpleVideoDisplay,NATIVE_HEIGHT,NATIVE_WIDTH,PAD,TRACK_HEIGHT,TRACK_WIDTH,_dragging,_hud,_knob,_lastKnobX,_mask,_player,_track,log,adjustSeek,handleClick,handleKnobDown,handleKnobSeekCheck,handleKnobUp,handlePlayerDuration,handlePlayerError,handlePlayerPosition,handlePlayerSize,handlePlayerState,handleRollOut,handleRollOver,handleTrackClick,redrawHUD,showHUD,unload" name="keywords">
 <title>com.threerings.flash.video.SimpleVideoDisplay</title>
 </head>
 <body>
@@ -55,11 +55,19 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_dragging">_dragging</a> : Boolean<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_hud">_hud</a> : Sprite<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_knob">_knob</a> : Sprite<div class="summaryTableDescription"> The seek selector knob, positioned on the hud.</div>
+</td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_lastKnobX">_lastKnobX</a> : int = -2.147483648E9<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
 </tr>
 <tr class="">
@@ -112,6 +120,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#adjustSeek()">adjustSeek</a>(trackX:Number):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#handleClick()">handleClick</a>(event:MouseEvent):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
@@ -120,6 +135,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#handleKnobDown()">handleKnobDown</a>(event:MouseEvent):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#handleKnobSeekCheck()">handleKnobSeekCheck</a>(event:Event):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SimpleVideoDisplay</td>
 </tr>
@@ -268,10 +290,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_dragging"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_dragging</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _dragging:Boolean</code>
+</div>
 <a name="_hud"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_hud</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_hud</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -285,6 +316,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _knob:Sprite</code><p> The seek selector knob, positioned on the hud. </p></div>
+<a name="_lastKnobX"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_lastKnobX</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _lastKnobX:int = -2.147483648E9</code>
+</div>
 <a name="_mask"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -331,10 +371,24 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
+<a name="adjustSeek()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">adjustSeek</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function adjustSeek(trackX:Number):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">trackX</span>:Number</code></td>
+</tr>
+</table>
+</div>
 <a name="handleClick()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">handleClick</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">handleClick</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -356,6 +410,20 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">event</span>:MouseEvent</code></td>
+</tr>
+</table>
+</div>
+<a name="handleKnobSeekCheck()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">handleKnobSeekCheck</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function handleKnobSeekCheck(event:Event):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">event</span>:Event</code></td>
 </tr>
 </table>
 </div>
