--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/util/ObjectSet.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/util/ObjectSet.html
@@ -94,7 +94,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#forEach()">forEach</a>(callback:Function, thisObject:* = null):void</div>
+<a class="signatureLink" href="#forEach()">forEach</a>(callback:Function):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">ObjectSet</td>
 </tr>
@@ -213,16 +213,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function forEach(callback:Function, thisObject:* = null):void</code><span class="label">Parameters</span>
+<code>public function forEach(callback:Function):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">callback</span>:Function</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">thisObject</span>:*</code> (default = <code>null</code>)<code></code></td>
 </tr>
 </table>
 </div>
